--- a/drift.ipynb
+++ b/drift.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,19 +13,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "TEXT_DB = {'url': 'mysql+pymysql://awen:123456@114.213.213.163/DispatchDatabase?charset=utf8mb4',\n",
     "            'echo': True,\n",
     "            'pool_size': 10,\n",
-    "            'max_overflow': 10, 'connect_args':{'connect_timeout': 10}}\n"
+    "            'max_overflow': 10, 'connect_args':{'connect_timeout': 10}}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
     "\n",
     "    reserve_point = relationship(\"Reserve_Point\", back_populates='district')\n",
     "\n",
-    "    child  = relationship(\"District\")\n",
+    "    child  = relationship(\"District\",lazy='subquery')#subquery,select,lazy='joined'\n",
     "\n",
     "    # @property\n",
     "    # def child(self):\n",
@@ -125,6 +125,7 @@
     "\n",
     "    id = Column('id', Integer, primary_key=True)\n",
     "\n",
+    "\n",
     "    name = Column('name', String(length=20))\n",
     "\n",
     "    longitude = Column('longitude', FLOAT, nullable=True)\n",
@@ -139,21 +140,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sqlalchemy.orm import subqueryload, lazyload, joinedload"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import neomodel\n",
+    "neomodel.config.DATABASE_URL = 'bolt://neo4j:zaw1219..@114.213.213.163:7687'"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from neomodel import StructuredRel, DateProperty\n",
+    "from neomodel import (StructuredNode, StringProperty, IntegerProperty,\n",
+    "                      UniqueIdProperty, RelationshipTo, BooleanProperty)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Material_Include(StructuredRel):\n",
+    "    on_date = DateProperty()\n",
+    "\n",
+    "\n",
+    "class Truck_Include(StructuredRel):\n",
+    "    on_date = DateProperty()\n",
+    "\n",
+    "\n",
+    "class Material_Node(StructuredNode):\n",
+    "\n",
+    "    id = UniqueIdProperty()\n",
+    "    material_id = IntegerProperty(unique_index=True, required=True, label='material_id')\n",
+    "\n",
+    "    name = StringProperty(label='material_name')\n",
+    "    num_unssign = IntegerProperty(label='num_unssign')\n",
+    "    num_assign = IntegerProperty(label='num_assign')\n",
+    "\n",
+    "    num_store = IntegerProperty(label='num_store')\n",
+    "\n",
+    "\n",
+    "class Truck_Node(StructuredNode):\n",
+    "    id = UniqueIdProperty()\n",
+    "\n",
+    "    license = StringProperty(unique_index=True, required=True, label='licence')\n",
+    "\n",
+    "\n",
+    "class District_Node(StructuredNode):\n",
+    "    id = UniqueIdProperty()\n",
+    "\n",
+    "    district_id = IntegerProperty(unique_index=True, required=True, label='district_id')\n",
+    "\n",
+    "    name = StringProperty(label='location_name')\n",
+    "\n",
+    "    suffix = StringProperty(label='suffix')\n",
+    "\n",
+    "    parent_id = IntegerProperty(required=True, label='parent_id')\n",
+    "\n",
+    "    include = RelationshipTo(\"District_Node\", \"INCLUDE_DISTRICT\")\n",
+    "\n",
+    "    include_reserve_point = RelationshipTo(\"Reserve_Point_Node\", \"INCLUDE_RESERVE_POINT\")\n",
+    "\n",
+    "\n",
+    "class Reserve_Point_Node(StructuredNode):\n",
+    "    id = UniqueIdProperty()\n",
+    "\n",
+    "    node_id = IntegerProperty(unique_index=True, label='node_id')\n",
+    "    name = StringProperty(label='reserve_point_name')\n",
+    "    is_allocated = BooleanProperty(label='isis_allocated')\n",
+    "\n",
+    "    include = RelationshipTo(\"Material_Node\", \"INCLUDE_MATERIAL\", model=Material_Include)\n",
+    "\n",
+    "    include_truck = RelationshipTo(\"Truck_Node\", \"INCLUDE_TRUCK\", model=Truck_Include)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,60 +248,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-11-21 14:52:30,236 INFO sqlalchemy.engine.Engine BEGIN (implicit)\n",
-      "2022-11-21 14:52:30,241 INFO sqlalchemy.engine.Engine SELECT table_district.id, table_district.name, table_district.parent_id, table_district.initial, table_district.initials, table_district.pinyin, table_district.extra, table_district.suffix, table_district.code, table_district.area_code, table_district.`order` \n",
+      "2022-11-22 19:14:38,984 INFO sqlalchemy.engine.Engine BEGIN (implicit)\n",
+      "2022-11-22 19:14:38,986 INFO sqlalchemy.engine.Engine SELECT table_district.id, table_district.name, table_district.parent_id, table_district.initial, table_district.initials, table_district.pinyin, table_district.extra, table_district.suffix, table_district.code, table_district.area_code, table_district.`order` \n",
       "FROM table_district \n",
       "WHERE table_district.name = %(name_1)s\n",
-      "2022-11-21 14:52:30,242 INFO sqlalchemy.engine.Engine [generated in 0.00101s] {'name_1': '四川'}\n",
-      "2022-11-21 14:52:30,255 INFO sqlalchemy.engine.Engine COMMIT\n",
-      "2022-11-21 14:52:30,276 INFO sqlalchemy.engine.Engine BEGIN (implicit)\n",
-      "2022-11-21 14:52:30,278 INFO sqlalchemy.engine.Engine SELECT table_district.id, table_district.name, table_district.parent_id, table_district.initial, table_district.initials, table_district.pinyin, table_district.extra, table_district.suffix, table_district.code, table_district.area_code, table_district.`order` \n",
-      "FROM table_district \n",
-      "WHERE table_district.parent_id = %(parent_id_1)s\n",
-      "2022-11-21 14:52:30,279 INFO sqlalchemy.engine.Engine [generated in 0.00096s] {'parent_id_1': 23}\n",
-      "2022-11-21 14:52:30,303 INFO sqlalchemy.engine.Engine ROLLBACK\n"
-     ]
-    },
-    {
-     "ename": "DetachedInstanceError",
-     "evalue": "Parent instance <District at 0x210c13be580> is not bound to a Session; lazy load operation of attribute 'child' cannot proceed (Background on this error at: https://sqlalche.me/e/14/bhk3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mDetachedInstanceError\u001b[0m                     Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [15], line 13\u001b[0m\n\u001b[0;32m     10\u001b[0m             get_district_tree(r)\n\u001b[0;32m     11\u001b[0m     \u001b[39mreturn\u001b[39;00m district\n\u001b[1;32m---> 13\u001b[0m rs \u001b[39m=\u001b[39m get_district_tree(get_district_by_name(\u001b[39m'\u001b[39;49m\u001b[39m四川\u001b[39;49m\u001b[39m'\u001b[39;49m))\n\u001b[0;32m     14\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m rs\u001b[39m.\u001b[39mchild:\n\u001b[0;32m     15\u001b[0m     \u001b[39mprint\u001b[39m(i)\n",
-      "Cell \u001b[1;32mIn [15], line 9\u001b[0m, in \u001b[0;36mget_district_tree\u001b[1;34m(district)\u001b[0m\n\u001b[0;32m      7\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m      8\u001b[0m     \u001b[39mfor\u001b[39;00m r \u001b[39min\u001b[39;00m rs:\n\u001b[1;32m----> 9\u001b[0m         district\u001b[39m.\u001b[39;49mchild\u001b[39m.\u001b[39mappend(r)\n\u001b[0;32m     10\u001b[0m         get_district_tree(r)\n\u001b[0;32m     11\u001b[0m \u001b[39mreturn\u001b[39;00m district\n",
-      "File \u001b[1;32mc:\\Users\\wen\\.conda\\envs\\neo4j\\lib\\site-packages\\sqlalchemy\\orm\\attributes.py:482\u001b[0m, in \u001b[0;36mInstrumentedAttribute.__get__\u001b[1;34m(self, instance, owner)\u001b[0m\n\u001b[0;32m    477\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mAttributeError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n\u001b[0;32m    478\u001b[0m     util\u001b[39m.\u001b[39mraise_(\n\u001b[0;32m    479\u001b[0m         orm_exc\u001b[39m.\u001b[39mUnmappedInstanceError(instance),\n\u001b[0;32m    480\u001b[0m         replace_context\u001b[39m=\u001b[39merr,\n\u001b[0;32m    481\u001b[0m     )\n\u001b[1;32m--> 482\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mimpl\u001b[39m.\u001b[39;49mget(state, dict_)\n",
-      "File \u001b[1;32mc:\\Users\\wen\\.conda\\envs\\neo4j\\lib\\site-packages\\sqlalchemy\\orm\\attributes.py:942\u001b[0m, in \u001b[0;36mAttributeImpl.get\u001b[1;34m(self, state, dict_, passive)\u001b[0m\n\u001b[0;32m    939\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m passive \u001b[39m&\u001b[39m CALLABLES_OK:\n\u001b[0;32m    940\u001b[0m     \u001b[39mreturn\u001b[39;00m PASSIVE_NO_RESULT\n\u001b[1;32m--> 942\u001b[0m value \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_fire_loader_callables(state, key, passive)\n\u001b[0;32m    944\u001b[0m \u001b[39mif\u001b[39;00m value \u001b[39mis\u001b[39;00m PASSIVE_NO_RESULT \u001b[39mor\u001b[39;00m value \u001b[39mis\u001b[39;00m NO_VALUE:\n\u001b[0;32m    945\u001b[0m     \u001b[39mreturn\u001b[39;00m value\n",
-      "File \u001b[1;32mc:\\Users\\wen\\.conda\\envs\\neo4j\\lib\\site-packages\\sqlalchemy\\orm\\attributes.py:978\u001b[0m, in \u001b[0;36mAttributeImpl._fire_loader_callables\u001b[1;34m(self, state, key, passive)\u001b[0m\n\u001b[0;32m    976\u001b[0m     \u001b[39mreturn\u001b[39;00m callable_(state, passive)\n\u001b[0;32m    977\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcallable_:\n\u001b[1;32m--> 978\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcallable_(state, passive)\n\u001b[0;32m    979\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    980\u001b[0m     \u001b[39mreturn\u001b[39;00m ATTR_EMPTY\n",
-      "File \u001b[1;32mc:\\Users\\wen\\.conda\\envs\\neo4j\\lib\\site-packages\\sqlalchemy\\orm\\strategies.py:863\u001b[0m, in \u001b[0;36mLazyLoader._load_for_state\u001b[1;34m(self, state, passive, loadopt, extra_criteria)\u001b[0m\n\u001b[0;32m    860\u001b[0m     \u001b[39mif\u001b[39;00m passive \u001b[39m&\u001b[39m attributes\u001b[39m.\u001b[39mNO_RAISE:\n\u001b[0;32m    861\u001b[0m         \u001b[39mreturn\u001b[39;00m attributes\u001b[39m.\u001b[39mPASSIVE_NO_RESULT\n\u001b[1;32m--> 863\u001b[0m     \u001b[39mraise\u001b[39;00m orm_exc\u001b[39m.\u001b[39mDetachedInstanceError(\n\u001b[0;32m    864\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mParent instance \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m is not bound to a Session; \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    865\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mlazy load operation of attribute \u001b[39m\u001b[39m'\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m cannot proceed\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    866\u001b[0m         \u001b[39m%\u001b[39m (orm_util\u001b[39m.\u001b[39mstate_str(state), \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mkey)\n\u001b[0;32m    867\u001b[0m     )\n\u001b[0;32m    869\u001b[0m \u001b[39m# if we have a simple primary key load, check the\u001b[39;00m\n\u001b[0;32m    870\u001b[0m \u001b[39m# identity map without generating a Query at all\u001b[39;00m\n\u001b[0;32m    871\u001b[0m \u001b[39mif\u001b[39;00m use_get:\n",
-      "\u001b[1;31mDetachedInstanceError\u001b[0m: Parent instance <District at 0x210c13be580> is not bound to a Session; lazy load operation of attribute 'child' cannot proceed (Background on this error at: https://sqlalche.me/e/14/bhk3)"
+      "2022-11-22 19:14:38,986 INFO sqlalchemy.engine.Engine [cached since 8164s ago] {'name_1': '四川'}\n",
+      "2022-11-22 19:14:38,996 INFO sqlalchemy.engine.Engine COMMIT\n",
+      "District id:23, name:四川 \n"
      ]
     }
    ],
    "source": [
-    "def get_district_tree(district:District):\n",
-    "    with get_session() as s:\n",
-    "        sql = select(District).where(District.parent_id==district.id)\n",
-    "        rs = s.execute(sql).scalars().all()\n",
-    "        s.expunge_all()\n",
-    "        if len(rs) == 0:\n",
-    "            return None\n",
-    "        for r in rs:\n",
-    "            district.child.append(r)\n",
-    "            get_district_tree(r)\n",
-    "    return district\n",
+    "d = get_district_by_name('四川')\n",
     "\n",
-    "rs = get_district_tree(get_district_by_name('四川'))\n",
-    "for i in rs.child:\n",
-    "    print(i)"
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_or_update_one_district(district:District):\n",
+    "    District_Node()"
    ]
   },
   {
@@ -256,12 +312,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.15"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "ccf777005d3aa2fe2549a342582b0087bc81c1cfdb2410cf490150de4bd1b3bc"
+    "hash": "3e9afa2b40254c70f312624f5042366ac5e840469929e7e78b621fa3fa6ae754"
    }
   }
  },
