--- a/drift.ipynb
+++ b/drift.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,28 +98,18 @@
     "\n",
     "    child  = relationship(\"District\",lazy='subquery')#subquery,select,lazy='joined'\n",
     "\n",
-    "    # @property\n",
-    "    # def child(self):\n",
-    "    #     return self.child\n",
-    "\n",
-    "    # @child.getter\n",
-    "    # def child(self):\n",
-    "    #     return self.child\n",
-    "    \n",
-    "    # @child.setter\n",
-    "    # def child(self, data):\n",
-    "    #     self.child.append(data)\n",
-    "\n",
-    "    # def __init__(self, *args: Any, **kwargs: Any) -> None:\n",
-    "    #     super().__init__(*args, **kwargs)\n",
-    "    #     self.child = list()\n",
-    "\n",
     "\n",
     "    def __repr__(self):\n",
     "        return \"District id:%d, name:%s \" % (self.id, self.name)\n",
-    "\n",
-    "\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class Reserve_Point(ModelBase):\n",
     "    __tablename__ = 'table_reserve_point'\n",
     "\n",
@@ -135,12 +125,12 @@
     "\n",
     "    allocated = Column('allocated', BOOLEAN)\n",
     "\n",
-    "    district = relationship(\"District\", back_populates='reserve_point')\n"
+    "    district = relationship(\"District\", back_populates='reserve_point')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,17 +139,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "import neomodel\n",
-    "neomodel.config.DATABASE_URL = 'bolt://neo4j:zaw1219..@114.213.213.163:7687'"
+    "neomodel.config.DATABASE_URL = 'bolt://neo4j:123456@114.213.213.163:7687'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,8 +169,15 @@
     "\n",
     "\n",
     "class Truck_Include(StructuredRel):\n",
-    "    on_date = DateProperty()\n",
-    "\n",
+    "    on_date = DateProperty()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "class Material_Node(StructuredNode):\n",
     "\n",
@@ -225,14 +222,12 @@
     "\n",
     "    include = RelationshipTo(\"Material_Node\", \"INCLUDE_MATERIAL\", model=Material_Include)\n",
     "\n",
-    "    include_truck = RelationshipTo(\"Truck_Node\", \"INCLUDE_TRUCK\", model=Truck_Include)\n",
-    "\n",
-    "\n"
+    "    include_truck = RelationshipTo(\"Truck_Node\", \"INCLUDE_TRUCK\", model=Truck_Include)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,45 +243,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from neomodel import db"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@db.transaction\n",
+    "def c_or_u_one_district_node(district:District):\n",
+    "\n",
+    "    def c_tool(district:District):\n",
+    "        nodes = District_Node.get_or_create({'district_id':district.id, \n",
+    "                                            'name':district.name, 'suffix':district.suffix, \n",
+    "                                            'parent_id':district.parent_id})\n",
+    "        for child in district.child:\n",
+    "            node_childs = c_tool(district=child)\n",
+    "            for p_node in nodes:\n",
+    "                for p_child in node_childs:\n",
+    "                    if not p_node.include.relationship(p_child):\n",
+    "                        p_node.include.connect(p_child)\n",
+    "    \n",
+    "        return nodes\n",
+    "    \n",
+    "    nodes = c_tool(district=district)\n",
+    "\n",
+    "    return nodes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def c_or_u_one_district_by_name(name:str):\n",
+    "    with get_session() as s:\n",
+    "        sql = select(District).where(District.name==name)\n",
+    "        rs = s.execute(sql).scalars().all()\n",
+    "        for r in rs:\n",
+    "            c_or_u_one_district_node(r)\n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_reserve_point_by_district_name(name:str):\n",
+    "    subsql_district = select(District).where(District.name == name)\n",
+    "    with get_session() as s:\n",
+    "        sql = select(Reserve_Point)\n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-11-22 19:14:38,984 INFO sqlalchemy.engine.Engine BEGIN (implicit)\n",
-      "2022-11-22 19:14:38,986 INFO sqlalchemy.engine.Engine SELECT table_district.id, table_district.name, table_district.parent_id, table_district.initial, table_district.initials, table_district.pinyin, table_district.extra, table_district.suffix, table_district.code, table_district.area_code, table_district.`order` \n",
-      "FROM table_district \n",
-      "WHERE table_district.name = %(name_1)s\n",
-      "2022-11-22 19:14:38,986 INFO sqlalchemy.engine.Engine [cached since 8164s ago] {'name_1': '四川'}\n",
-      "2022-11-22 19:14:38,996 INFO sqlalchemy.engine.Engine COMMIT\n",
-      "District id:23, name:四川 \n"
+      "SELECT table_district.id, table_district.name, table_district.parent_id, table_district.initial, table_district.initials, table_district.pinyin, table_district.extra, table_district.suffix, table_district.code, table_district.area_code, table_district.\"order\", table_reserve_point.id AS id_1, table_reserve_point.name AS name_1, table_reserve_point.longitude, table_reserve_point.latitude, table_reserve_point.district_id, table_reserve_point.allocated \n",
+      "FROM table_district JOIN table_reserve_point ON table_district.id = table_reserve_point.district_id\n"
      ]
     }
    ],
    "source": [
-    "d = get_district_by_name('四川')\n",
-    "\n",
-    "print(d)"
+    "print(select(District, Reserve_Point)\n",
+    ".join_from(District, Reserve_Point, District.id == Reserve_Point.district_id))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def create_or_update_one_district(district:District):\n",
-    "    District_Node()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -312,7 +348,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.15"
   },
   "orig_nbformat": 4,
   "vscode": {
