--- a/drift.ipynb
+++ b/drift.ipynb
@@ -2,42 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import contextlib\n",
+    "import requests\n",
+    "from typing import Any\n",
+    "\n",
+    "\n",
     "from sqlalchemy import create_engine\n",
-    "from sqlalchemy.orm import sessionmaker"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from sqlalchemy import (insert, select, update, delete)\n",
+    "from sqlalchemy import Column, Integer, String, DateTime, FLOAT, SMALLINT, ForeignKey, BOOLEAN\n",
+    "from sqlalchemy.orm import sessionmaker\n",
+    "from sqlalchemy.orm import relationship\n",
+    "from sqlalchemy.orm import subqueryload, lazyload, joinedload\n",
+    "\n",
+    "from sqlalchemy.ext.declarative import declarative_base\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "from neomodel import StructuredRel, DateProperty\n",
+    "from neomodel import (StructuredNode, StringProperty, IntegerProperty,\n",
+    "                      UniqueIdProperty, RelationshipTo, BooleanProperty)\n",
+    "from neomodel import db, config\n",
+    "\n",
+    "config.DATABASE_URL = 'bolt://neo4j:123456@114.213.213.163:7687'\n",
+    "\n",
+    "ModelBase = declarative_base()\n",
+    "\n",
     "TEXT_DB = {'url': 'mysql+pymysql://awen:123456@114.213.213.163/DispatchDatabase?charset=utf8mb4',\n",
     "            'echo': True,\n",
     "            'pool_size': 10,\n",
-    "            'max_overflow': 10, 'connect_args':{'connect_timeout': 10}}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "engine = create_engine(**TEXT_DB)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "            'max_overflow': 10, 'connect_args':{'connect_timeout': 10}}\n",
+    "\n",
+    "\n",
+    "engine = create_engine(**TEXT_DB)\n",
+    "\n",
     "@contextlib.contextmanager\n",
     "def get_session():\n",
     "    Session = sessionmaker(bind=engine)\n",
@@ -49,32 +51,15 @@
     "        s.rollback()\n",
     "        raise e\n",
     "    finally:\n",
-    "        s.close()"
+    "        s.close()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sqlalchemy import (insert, select, update, delete)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from typing import Any\n",
-    "from sqlalchemy.ext.declarative import declarative_base\n",
-    "\n",
-    "from sqlalchemy import Column, Integer, String, DateTime, FLOAT, SMALLINT, ForeignKey, BOOLEAN\n",
-    "from sqlalchemy.orm import relationship\n",
-    "ModelBase = declarative_base()\n",
-    "\n",
-    "\n",
     "class District(ModelBase):\n",
     "    __tablename__ = 'table_district'\n",
     "\n",
@@ -94,19 +79,18 @@
     "\n",
     "    order = Column('order', SMALLINT)  # 排序\n",
     "\n",
-    "    reserve_point = relationship(\"Reserve_Point\", back_populates='district')\n",
+    "    reserve_point = relationship(\"Reserve_Point\", back_populates='district', lazy='subquery')\n",
     "\n",
-    "    child  = relationship(\"District\",lazy='subquery')#subquery,select,lazy='joined'\n",
+    "    child  = relationship(\"District\", lazy='subquery')#subquery,select,lazy='joined'\n",
     "\n",
     "\n",
     "    def __repr__(self):\n",
-    "        return \"District id:%d, name:%s \" % (self.id, self.name)\n",
-    "\n"
+    "        return \"District id:%d, name:%s \" % (self.id, self.name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,37 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sqlalchemy.orm import subqueryload, lazyload, joinedload"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import neomodel\n",
-    "neomodel.config.DATABASE_URL = 'bolt://neo4j:123456@114.213.213.163:7687'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from neomodel import StructuredRel, DateProperty\n",
-    "from neomodel import (StructuredNode, StringProperty, IntegerProperty,\n",
-    "                      UniqueIdProperty, RelationshipTo, BooleanProperty)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,16 +123,15 @@
     "\n",
     "\n",
     "class Truck_Include(StructuredRel):\n",
-    "    on_date = DateProperty()\n"
+    "    on_date = DateProperty()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "class Material_Node(StructuredNode):\n",
     "\n",
     "    id = UniqueIdProperty()\n",
@@ -243,15 +196,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from neomodel import db"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
    "outputs": [],
@@ -298,11 +242,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_reserve_point_by_district_name(name:str):\n",
-    "    subsql_district = select(District).where(District.name == name)\n",
-    "    with get_session() as s:\n",
-    "        sql = select(Reserve_Point)\n",
-    "    return None"
+    "def samulate_reserve_point_in_district(name:str):\n",
+    "    pass"
    ]
   },
   {
@@ -323,6 +264,57 @@
     "print(select(District, Reserve_Point)\n",
     ".join_from(District, Reserve_Point, District.id == Reserve_Point.district_id))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = 'ATM机'.encode('utf8')\n",
+    "tag = '银行'.encode('utf8')\n",
+    "region='北京'.encode('utf8')\n",
+    "ak = 'FGiUvPFlLzZ2qXxbH851dgF815apNwLM'\n",
+    "\n",
+    "url = r'https://api.map.baidu.com/place/v2/search?query={0}&tag={1}&region={2}&output=json&ak={3}'.format(query, tag, region, ak)\n",
+    "url_2 = 'https://api.map.baidu.com/geoconv/v1/?coords=114.21892734521,29.575429778924&from=1&to=5&ak={0}'.format(ak)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r = requests.get(url=url_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'status': 0, 'result': [{'x': 114.2307519546763, 'y': 29.57908428837437}]}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
